go back to version where css not showing up on page, fix later

--- a/style.css
+++ b/style.css
@@ -17,13 +17,11 @@ a:hover {
 nav a {
     /* padding: 20px; */
     margin: 5px;
-
-
 }
 
-/* .container {
-    margin: 350px;
-} */
+.container {
+    margin: 30px;
+}
 
 #main-text {
     margin: 300px;
